--- a/component/footer.html
+++ b/component/footer.html
@@ -1,32 +1,46 @@
 <div class="container-l footer-container">
-    <div class="container-f flex bg-white footer-top">
-        <img src="../img/logo/logo-footer.webp" alt="">
-    </div>
-    <div class="container-f flex center-ver  footer-bottom">
-        <div class="footer-main-logo">
-            <img src="../img/logo/LOGO FEBI-11.svg" alt="">
-        </div>
-        <div class="flex flex-col  footer-info">
-            <h3 class="footer-title">CÔNG TY CỔ PHẦN THỰC PHẨM FEBI</h3>
-            <p class="footer-address"><span>Ấp tây, xã kim sơn, tỉnh đồng tháp, Việt nam</span></p>
-        </div>
-        <div class="flex flex-col center-ver footer-contact">
-            <div class="footer-contact__icon">
-                <img src="../img/logo/bo-cong-thuong 1.png" alt="">
+            <div class="container-f flex bg-white footer-top">
+                <img src="../img/logo/logo-footer.webp" alt="">
             </div>
-            <div class="flex center-ver footer-ecom">
-                <a href="#" class="flex center-ver center-hor"><img src="../img/icon/shoppe.png" alt=""></a>
-                <a href="#" class="flex center-ver center-hor"><img src="../img/icon/tiktok-shop.png" alt=""></a>
-                <a href="#" class="flex center-ver center-hor"><img src="../img/icon/lazada.png" alt=""></a>
-            </div>
-            <div class="flex center-ver footer-social">
-                <a href="#" target="_blank"><img src="./img/icon/you.png" alt=""></a>
-                <a href="#" target="_blank"><img src="./img/icon/zalo.png" alt=""></a>
-                <a href="#" target="_blank"><img src="./img/icon/fac.png" alt=""></a>
-                <a href="#" target="_blank"><img src="./img/icon/ins.png" alt=""></a>
-                <a href="#" target="_blank"><img src="./img/icon/in.png" alt=""></a>
+            <div class="container-f flex footer-bottom">
+                <div class="flex flex-col footer-bottom__content">
+                    <h3>công ty tnhh jan'slenmen</h3>
+                    <p>Thông điệp: “Hương vị tự nhiên từ đất và con người Việt Nam – chậm rãi, lành mạnh, bền vững”.</p>
+                    <p>84D Nguyễn Đình Chiểu (đường Cây Điệp), phường Sài Gòn.</p>
+                    <p>ĐT: 0971077678 - 0918 240 739</p>
+                    <p>Thời gian hoạt động: </p>
+                    <p>Email: jansatisha@gmail.com</p>
+                    <p>Giấy chứng nhận đăng ký kinh doanh số: 0317600630 <br>
+                        Ngày cấp: 09/12/2022 <br>
+                        Nơi cấp: Sở Kế hoạch và Đầu tư Thành phố Hồ Chí Minh</p>
+                </div>
+                <div class="flex flex-col footer-bottom__content">
+                    <h3>Về JAN’SLENMEN</h3>
+                    <a href="#">Giới thiệu doanh nghiệp</a>
+                    <a href="#">Tuyển dụng</a>
+                    <a href="#">Gửi góp ý, khiếu nại</a>
+                </div>
+                <div class="flex flex-col footer-bottom__content">
+                    <h3>Các chính sách</h3>
+                    <a href="#">Chính sách giá</a>
+                    <a href="#">Chính sách đổi vỏ chai</a>
+                    <a href="#">Chính sách bảo mật</a>
+                    <a href="#">Chính sách kiểm tra và đổi trả sản phẩm</a>
+                    <a href="#">Chính sách thanh toán và giao hàng</a>
+                </div>
+                <div class="flex flex-col footer-bottom__content">
+                    <h3>Mạng xã hội</h3>
+                    <div class=" flex footer-bottom__social">
+                        <a class="flex center-hor center-ver "href="#">
+                            <img src="./img/icon/instagram.webp" alt="">
+                        </a>
+                        <a class="flex center-hor center-ver "href="#">
+                            <img src="./img/icon/facebook-f.webp" alt="">
+                        </a>
+                        <a class="flex center-hor center-ver "href="#">
+                            <img src="./img/icon/youtube.webp" alt="">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    
-</div>
