--- a/component/header.html
+++ b/component/header.html
@@ -1,37 +1,30 @@
-<div class="container-f flex center-hor bg-white header-top">
-    <div class="container-l flex center-ver header-container">
-        <a href="../index.html" class="logo">
-            <img title="logo trang chủ" src="./img/logo/LOGO FEBI-09.svg" alt="">
-        </a>
-        <div class="header-function">
-            <div class="flex center-ver search-box">
-                <input type="text" placeholder="Search..." />
-                <button class="flex center-hor " type="submit">
-                    <img src="./img/icon/search-line.png" alt="Search" />
-                </button>
-            </div>
-            <a href="#" class="header-function__blog">Blog</a>
-            <a href="#" class="header-function__contact">Liên hệ</a>
-        </div>
-    </div>
-</div>
-<div class="container-f flex center-hor header-bottom">
-    <div class="container-l flex center-ver header-container">
-        <div class="header-content flex center-ver">
-            <div class="flex center-ver menu-container">
-                <a href="#" class="menu-container__item">Câu chuyện Atisha</a>
-                <a href="#" class="menu-container__item">Kombucha</a>
-                <a href="#" class="menu-container__item">Mật chuối</a>
-                <a href="#" class="menu-container__item">Juice</a>
-                <a href="#" class="menu-container__item">Bỏng gạo dinh dưỡng</a>
-                <a href="#" class="menu-container__item">Sen</a>
-                <a href="#" class="menu-container__item">Gia vị</a>
-                <a href="#" class="menu-container__item">Cà phê</a>
-                <a href="#" class="menu-container__item">Chăm sóc da và làm đẹp</a>
-                <a href="#" class="menu-container__item">Dinh dưỡng & sức khỏe</a>
-                <button class="menu-container__bar">
-                    <img src="" alt="">
-                </button>
+<div class="container-m flex center-ver header-container header-top">
+            <a href="../index.html" class="logo">
+                <img title="logo trang chủ" src="./img/logo/logo-top.webp" alt="">
+            </a>
+            <div class="flex header-function">
+                <div class="flex center-ver search-box">
+                    <input type="text" placeholder="Sản phẩm bạn muốn tìm kiếm" />
+                    <button class="flex center-hor " type="submit">
+                        <img src="./img/icon/search.webp" alt="Search" />
+                    </button>
+                </div>
+                <a href="#" class="header-function__blog">Blog</a>
+                <a href="#" class="header-function__contact">Liên hệ</a>
             </div>
         </div>
-    </div>
+        <div class="container-m flex header-container header-bottom">
+            <a href="#" class="menu-container__item drop-down">Câu chuyện Atisha</a>
+            <a href="#" class="menu-container__item drop-down">Kombucha</a>
+            <a href="#" class="menu-container__item drop-down">Mật chuối</a>
+            <a href="#" class="menu-container__item drop-down">Juice</a>
+            <a href="#" class="menu-container__item drop-down">Bỏng gạo dinh dưỡng</a>
+            <a href="#" class="menu-container__item drop-down">Sen</a>
+            <a href="#" class="menu-container__item drop-down">Gia vị</a>
+            <a href="#" class="menu-container__item drop-down">Cà phê</a>
+            <a href="#" class="menu-container__item drop-down">Chăm sóc da & làm đẹp</a>
+            <a href="#" class="menu-container__item drop-down">Dinh dưỡng & sức khỏe</a>
+            <button class="menu-container__bar">
+                <img src="./img/icon/bars.svg" alt="">
+            </button>
+        </div>
