--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -499,3 +499,16 @@ footer {
     text-align: center;
 
 }
+
+/* css fade */
+.hidden-section {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.9s ease-out, transform 0.9s ease-out, filter 0.9s ease-out;
+    will-change: opacity, transform, filter;
+}
+
+.show-up {
+    opacity: 1;
+    transform: translateY(0);
+}
