--- a/component/header.html
+++ b/component/header.html
@@ -1,92 +1,197 @@
 <div class="container-m flex center-ver header-container header-top">
-    <a href="../index.html" class="logo">
-        <img title="logo trang chủ" src="./img/logo/logo-top.webp" alt="">
-    </a>
-    <div class="flex header-function">
-        <div class="flex center-ver search-box">
-            <input type="text" placeholder="Sản phẩm bạn muốn tìm kiếm" />
-            <button class="flex center-hor " type="submit">
-                <img src="./img/icon/search.webp" alt="Search" />
+            <a href="../index.html" class="logo">
+                <img title="logo trang chủ" src="./img/logo/logo-top.webp" alt="">
+            </a>
+            <div class="flex header-function">
+                <div class="flex center-ver search-box">
+                    <input type="text" placeholder="Sản phẩm bạn muốn tìm kiếm" />
+                    <button class="flex center-hor " type="submit">
+                        <img src="./img/icon/search.webp" alt="Search" />
+                    </button>
+                </div>
+                <a href="#" class="header-function__blog">Blog</a>
+                <a href="#" class="header-function__contact">Liên hệ</a>
+            </div>
+        </div>
+        <div class="container-m flex header-container header-bottom">
+            <div class="menu-container__item drop-down">
+                <a href="#">Câu chuyện Atisha</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Về chúng tôi</a>
+                    <a href="#">Giá trị doanh nghiệp</a>
+                    <a href="#">Giá trị cốt lõi</a>
+                    <a href="#">Sản phẩm kinh doanh</a>
+                    <a href="#">Quy trình sản xuất bền vững</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Kombucha</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Kombucha Rosé</a>
+                    <a href="#">Kombucha Apple</a>
+                    <a href="#">Kombucha Pear</a>
+                    <a href="#">Kombucha Banana</a>
+                    <a href="#">Kombucha Berries</a>
+                    <a href="#">Kombucha Peach</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Mật chuối</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Mật chuối Delta</a>
+                    <a href="#">Mật chuối Highland</a>
+                    <a href="#">Mật chuối ủ nhiều năm</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Juice</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Nước ép chuối</a>
+                    <a href="#">Nước ép dâu tây</a>
+                    <a href="#">Nước bù khoáng</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Bỏng gạo dinh dưỡng</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Thanh dinh dưỡng</a>
+                    <a href="#">Bột bỏng gạo dinh dưỡng</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Sen</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Bột sen dinh dưỡng</a>
+                    <a href="#">Bột sen chuối</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Gia vị</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Dầu hào chay từ chuối</a>
+                    <a href="#">Nước tương chay</a>
+                    <a href="#">Giấm Balsamic</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Cà phê</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Robusta nhân xanh</a>
+                    <a href="#">Arabica nhân xanh</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Chăm sóc da & làm đẹp</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Chăm sóc tóc và da đầu</a>
+                    <a href="#">Sữa rửa mặt</a>
+                    <a href="#">Kem dưỡng da, dưỡng ẩm</a>
+                    <a href="#">Tinh chất</a>
+                    <a href="#">Chăm sóc cơ thể</a>
+                </div>
+            </div>
+            <div class="menu-container__item drop-down">
+                <a href="#">Dinh dưỡng & sức khỏe</a>
+                <div class="menu-list flex flex-col">
+                    <a href="#">Phương pháp dinh dưỡng</a>
+                </div>
+            </div>
+            <button class="menu-container__bar">
+                <img src="./img/icon/bars.svg" alt="">
             </button>
+            <div class="menu-list__table flex flex-col">
+                <div class="menu-root">
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Câu chuyện Atisha</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Về chúng tôi</a></div>
+                            <div class="flex"><a href="#">Giá trị doanh nghiệp</a></div>
+                            <div class="flex"><a href="#">Giá trị cốt lõi</a></div>
+                            <div class="flex"><a href="#">Sản phẩm kinh doanh</a></div>
+                            <div class="flex"><a href="#">Quy trình sản xuất bền vững</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Kombucha</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Kombucha Rosé</a></div>
+                            <div class="flex"><a href="#">Kombucha Apple</a></div>
+                            <div class="flex"><a href="#">Kombucha Pear</a></div>
+                            <div class="flex"><a href="#">Kombucha Banana</a></div>
+                            <div class="flex"><a href="#">Kombucha Berries</a></div>
+                            <div class="flex"><a href="#">Kombucha Peach</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Mật chuối</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Mật chuối Delta</a></div>
+                            <div class="flex"><a href="#">Mật chuối Highland</a></div>
+                            <div class="flex"><a href="#">Mật chuối ủ nhiều năm</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Juice</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Nước ép chuối</a></div>
+                            <div class="flex"><a href="#">Nước ép dâu tây</a></div>
+                            <div class="flex"><a href="#">Nước bù khoáng</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Bỏng gạo dinh dưỡng</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Thanh dinh dưỡng</a></div>
+                            <div class="flex"><a href="#">Bột bỏng gạo dinh dưỡng</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Sen</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Bột sen dinh dưỡng</a></div>
+                            <div class="flex"><a href="#">Bột sen chuối</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Gia vị</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Dầu hào chay từ chuối</a></div>
+                            <div class="flex"><a href="#">Nước tương chay</a></div>
+                            <div class="flex"><a href="#">Giấm Balsamic</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Cà phê</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Robusta nhân xanh</a></div>
+                            <div class="flex"><a href="#">Arabica nhân xanh</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Chăm sóc da & làm đẹp</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Chăm sóc tóc và da đầu</a></div>
+                            <div class="flex"><a href="#">Sữa rửa mặt</a></div>
+                            <div class="flex"><a href="#">Kem dưỡng da, dưỡng ẩm</a></div>
+                            <div class="flex"><a href="#">Tinh chất</a></div>
+                            <div class="flex"><a href="#">Chăm sóc cơ thể</a></div>
+                        </div>
+                    </div>
+
+                    <div class="menu-item flex flex-col flex">
+                        <a href="#">Dinh dưỡng & sức khỏe</a>
+                        <div class="submenu bg-white flex flex-col">
+                            <div class="flex"><a href="#">Phương pháp dinh dưỡng</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <a href="#" class="header-function__blog">Blog</a>
-        <a href="#" class="header-function__contact">Liên hệ</a>
-    </div>
-</div>
-<div class="container-m flex header-container header-bottom">
-    <a href="#" class="menu-container__item drop-down">Câu chuyện Atisha
-        <div class="menu-list">
-            <a href="#">Về chúng tôi</a>
-            <a href="#">Giá trị doanh nghiệp</a>
-            <a href="#">Giá trị cốt lỗi</a>
-            <a href="#">Sản phẩm kinh doanh</a>
-            <a href="#">Quy trình sản xuất bền vững</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Kombucha
-        <div class="menu-list">
-            <a href="#">Kombucha Rosé</a>
-            <a href="#">Kombucha Apple</a>
-            <a href="#">Kombucha Pear</a>
-            <a href="#">Kombucha Banana</a>
-            <a href="#">Kombucha Berries</a>
-            <a href="#">Kombucha Peach</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Mật chuối
-        <div class="flex flex-col menu-list">
-            <a href="#">Mật chuối Delta</a>
-            <a href="#">Mật chuối Highland</a>
-            <a href="#">Mật chuối ủ nhiều năm</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Juice
-        <div class="flex flex-col menu-list">
-            <a href="#">Nước ép chuối</a>
-            <a href="#">Nước ép dâu tây</a>
-            <a href="#">Nước bù khoáng</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Bỏng gạo dinh dưỡn
-        <div class="flex flex-col menu-list">
-            <a href="#">Thanh dinh dưỡng</a>
-            <a href="#">Bột bỏng gạo dinh dưỡng</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Sen
-        <div class="flex flex-col menu-list">
-            <a href="#">Bột sen dinh dưỡng</a>
-            <a href="#">Bột sen chuối</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Gia vị
-        <div class="flex flex-col menu-list">
-            <a href="#">Dầu hào chay từ chuối</a>
-            <a href="#">Nước tương chay</a>
-            <a href="#">Giấm Balsamic</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Cà phê
-        <div class="flex flex-col menu-list">
-            <a href="#">Robusta nhân xanh</a>
-            <a href="#">Arabica nhân xanh</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Chăm sóc da & làm đẹp
-        <div class="flex flex-col menu-list">
-            <a href="#">Chăm sóc tóc và da đầu</a>
-            <a href="#">Sữa rửa mặt</a>
-            <a href="#">Kem dưỡng da, dưỡng ẩm</a>
-            <a href="#">Tinh chất</a>
-            <a href="#">Chăm sóc cơ thể</a>
-        </div>
-    </a>
-    <a href="#" class="menu-container__item drop-down">Dinh dưỡng & sức khỏe
-        <div class="flex flex-col menu-list">
-            <a href="#">Phương pháp dinh dưỡng</a>
-        </div>
-    </a>
-    <button class="menu-container__bar">
-        <img src="./img/icon/bars.svg" alt="">
-    </button>
-</div>
