--- a/component/header.html
+++ b/component/header.html
@@ -9,13 +9,13 @@
                         <img src="./img/icon/search.webp" alt="Search" />
                     </button>
                 </div>
-                <a href="#" class="header-function__blog">Blog</a>
-                <a href="#" class="header-function__contact">Liên hệ</a>
+                <a href="../blog.html" class="header-function__blog">Blog</a>
+                <a href="../contact.html" class="header-function__contact">Liên hệ</a>
             </div>
         </div>
         <div class="container-m flex header-container header-bottom">
             <div class="menu-container__item drop-down">
-                <a href="#">Câu chuyện Atisha</a>
+                <a href="../intro.html">Câu chuyện Atisha</a>
                 <div class="menu-list flex flex-col">
                     <a href="#">Về chúng tôi</a>
                     <a href="#">Giá trị doanh nghiệp</a>
@@ -27,73 +27,73 @@
             <div class="menu-container__item drop-down">
                 <a href="#">Kombucha</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Kombucha Rosé</a>
-                    <a href="#">Kombucha Apple</a>
-                    <a href="#">Kombucha Pear</a>
-                    <a href="#">Kombucha Banana</a>
-                    <a href="#">Kombucha Berries</a>
-                    <a href="#">Kombucha Peach</a>
+                    <a href="../product.html">Kombucha Rosé</a>
+                    <a href="../product.html">Kombucha Apple</a>
+                    <a href="../product.html">Kombucha Pear</a>
+                    <a href="../product.html">Kombucha Banana</a>
+                    <a href="../product.html">Kombucha Berries</a>
+                    <a href="../product.html">Kombucha Peach</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Mật chuối</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Mật chuối Delta</a>
-                    <a href="#">Mật chuối Highland</a>
-                    <a href="#">Mật chuối ủ nhiều năm</a>
+                    <a href="../product.html">Mật chuối Delta</a>
+                    <a href="../product.html">Mật chuối Highland</a>
+                    <a href="../product.html">Mật chuối ủ nhiều năm</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Juice</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Nước ép chuối</a>
-                    <a href="#">Nước ép dâu tây</a>
-                    <a href="#">Nước bù khoáng</a>
+                    <a href="../product.html">Nước ép chuối</a>
+                    <a href="../product.html">Nước ép dâu tây</a>
+                    <a href="../product.html">Nước bù khoáng</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Bỏng gạo dinh dưỡng</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Thanh dinh dưỡng</a>
-                    <a href="#">Bột bỏng gạo dinh dưỡng</a>
+                    <a href="../product.html">Thanh dinh dưỡng</a>
+                    <a href="../product.html">Bột bỏng gạo dinh dưỡng</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Sen</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Bột sen dinh dưỡng</a>
-                    <a href="#">Bột sen chuối</a>
+                    <a href="../product.html">Bột sen dinh dưỡng</a>
+                    <a href="../product.html">Bột sen chuối</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Gia vị</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Dầu hào chay từ chuối</a>
-                    <a href="#">Nước tương chay</a>
-                    <a href="#">Giấm Balsamic</a>
+                    <a href="../product.html">Dầu hào chay từ chuối</a>
+                    <a href="../product.html">Nước tương chay</a>
+                    <a href="../product.html">Giấm Balsamic</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Cà phê</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Robusta nhân xanh</a>
-                    <a href="#">Arabica nhân xanh</a>
+                    <a href="../product.html">Robusta nhân xanh</a>
+                    <a href="../product.html">Arabica nhân xanh</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Chăm sóc da & làm đẹp</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Chăm sóc tóc và da đầu</a>
-                    <a href="#">Sữa rửa mặt</a>
-                    <a href="#">Kem dưỡng da, dưỡng ẩm</a>
-                    <a href="#">Tinh chất</a>
-                    <a href="#">Chăm sóc cơ thể</a>
+                    <a href="../product.html">Chăm sóc tóc và da đầu</a>
+                    <a href="../product.html">Sữa rửa mặt</a>
+                    <a href="../product.html">Kem dưỡng da, dưỡng ẩm</a>
+                    <a href="../product.html">Tinh chất</a>
+                    <a href="../product.html">Chăm sóc cơ thể</a>
                 </div>
             </div>
             <div class="menu-container__item drop-down">
                 <a href="#">Dinh dưỡng & sức khỏe</a>
                 <div class="menu-list flex flex-col">
-                    <a href="#">Phương pháp dinh dưỡng</a>
+                    <a href="../product.html">Phương pháp dinh dưỡng</a>
                 </div>
             </div>
             <button class="menu-container__bar">
@@ -115,81 +115,81 @@
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Kombucha</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Kombucha Rosé</a></div>
-                            <div class="flex"><a href="#">Kombucha Apple</a></div>
-                            <div class="flex"><a href="#">Kombucha Pear</a></div>
-                            <div class="flex"><a href="#">Kombucha Banana</a></div>
-                            <div class="flex"><a href="#">Kombucha Berries</a></div>
-                            <div class="flex"><a href="#">Kombucha Peach</a></div>
+                            <div class="flex"><a href="../product.html">Kombucha Rosé</a></div>
+                            <div class="flex"><a href="../product.html">Kombucha Apple</a></div>
+                            <div class="flex"><a href="../product.html">Kombucha Pear</a></div>
+                            <div class="flex"><a href="../product.html">Kombucha Banana</a></div>
+                            <div class="flex"><a href="../product.html">Kombucha Berries</a></div>
+                            <div class="flex"><a href="../product.html">Kombucha Peach</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Mật chuối</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Mật chuối Delta</a></div>
-                            <div class="flex"><a href="#">Mật chuối Highland</a></div>
-                            <div class="flex"><a href="#">Mật chuối ủ nhiều năm</a></div>
+                            <div class="flex"><a href="../product.html">Mật chuối Delta</a></div>
+                            <div class="flex"><a href="../product.html">Mật chuối Highland</a></div>
+                            <div class="flex"><a href="../product.html">Mật chuối ủ nhiều năm</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Juice</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Nước ép chuối</a></div>
-                            <div class="flex"><a href="#">Nước ép dâu tây</a></div>
-                            <div class="flex"><a href="#">Nước bù khoáng</a></div>
+                            <div class="flex"><a href="../product.html">Nước ép chuối</a></div>
+                            <div class="flex"><a href="../product.html">Nước ép dâu tây</a></div>
+                            <div class="flex"><a href="../product.html">Nước bù khoáng</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Bỏng gạo dinh dưỡng</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Thanh dinh dưỡng</a></div>
-                            <div class="flex"><a href="#">Bột bỏng gạo dinh dưỡng</a></div>
+                            <div class="flex"><a href="../product.html">Thanh dinh dưỡng</a></div>
+                            <div class="flex"><a href="../product.html">Bột bỏng gạo dinh dưỡng</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Sen</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Bột sen dinh dưỡng</a></div>
-                            <div class="flex"><a href="#">Bột sen chuối</a></div>
+                            <div class="flex"><a href="../product.html">Bột sen dinh dưỡng</a></div>
+                            <div class="flex"><a href="../product.html">Bột sen chuối</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Gia vị</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Dầu hào chay từ chuối</a></div>
-                            <div class="flex"><a href="#">Nước tương chay</a></div>
-                            <div class="flex"><a href="#">Giấm Balsamic</a></div>
+                            <div class="flex"><a href="../product.html">Dầu hào chay từ chuối</a></div>
+                            <div class="flex"><a href="../product.html">Nước tương chay</a></div>
+                            <div class="flex"><a href="../product.html">Giấm Balsamic</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Cà phê</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Robusta nhân xanh</a></div>
-                            <div class="flex"><a href="#">Arabica nhân xanh</a></div>
+                            <div class="flex"><a href="../product.html">Robusta nhân xanh</a></div>
+                            <div class="flex"><a href="../product.html">Arabica nhân xanh</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Chăm sóc da & làm đẹp</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Chăm sóc tóc và da đầu</a></div>
-                            <div class="flex"><a href="#">Sữa rửa mặt</a></div>
-                            <div class="flex"><a href="#">Kem dưỡng da, dưỡng ẩm</a></div>
-                            <div class="flex"><a href="#">Tinh chất</a></div>
-                            <div class="flex"><a href="#">Chăm sóc cơ thể</a></div>
+                            <div class="flex"><a href="../product.html">Chăm sóc tóc và da đầu</a></div>
+                            <div class="flex"><a href="../product.html">Sữa rửa mặt</a></div>
+                            <div class="flex"><a href="../product.html">Kem dưỡng da, dưỡng ẩm</a></div>
+                            <div class="flex"><a href="../product.html">Tinh chất</a></div>
+                            <div class="flex"><a href="../product.html">Chăm sóc cơ thể</a></div>
                         </div>
                     </div>
 
                     <div class="menu-item flex flex-col flex">
                         <a href="#">Dinh dưỡng & sức khỏe</a>
                         <div class="submenu bg-white flex flex-col">
-                            <div class="flex"><a href="#">Phương pháp dinh dưỡng</a></div>
+                            <div class="flex"><a href="../product.html">Phương pháp dinh dưỡng</a></div>
                         </div>
                     </div>
                 </div>
