--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -17,11 +17,24 @@
 .header-function__blog {
     border: 1px solid var(--secondary-color);
     color: var(--secondary-color);
+    transition: all 0.6s ease;
+}
+
+.header-function__contact:hover,
+.header-function__blog:hover {
+    transform: translateY(-6px) scale(1.03);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.25);
+}
+
+.header-function__blog:hover {
+    background-color: var(--secondary-color);
+    color: var(--white-color);
 }
 
 .header-function__contact {
     background-color: var(--primary-color);
     color: var(--white-color);
+    transition: all 0.4s ease;
 }
 
 .header-function__blog,
@@ -311,6 +324,7 @@
     margin: 20px 0px;
 }
 
+.feedback-title img,
 .product-title img,
 .knowledge-container>div:first-child img,
 .news-container>div:first-child img,
@@ -366,6 +380,12 @@
     border-radius: 10px;
     padding: 15px 30px;
     gap: 10px;
+    transition: all 0.4s ease;
+}
+
+.intro-readmore:hover {
+    transform: translateY(-6px) scale(1.03);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.25);
 }
 
 .news-readmore::after {
@@ -386,6 +406,24 @@
     display: inline-block;
     width: 12px;
     height: auto;
+}
+
+/* css intro */
+.intro-banner {
+    position: relative;
+    gap: 10px;
+}
+
+.intro-banner__shortcut{
+    padding: 15px 20px;
+    border-bottom: 1px solid transparent;
+    transition: all 0.6s ease;
+    font-weight: bold;
+    color: var(--black-color)
+}
+
+.intro-banner__shortcut:hover{
+    border-bottom: 1px solid var(--primary-color);
 }
 
 /* css advise */
@@ -601,6 +639,7 @@
     gap: 30px;
 }
 
+.product-page__item,
 .product-item {
     padding: 10px;
     border-radius: 10px;
@@ -612,12 +651,22 @@
     transition: all 0.3s ease;
 }
 
+.product-item {
+    width: calc(100% / 5 - 15px);
+}
+
+.product-page__item {
+    width: calc(100% / 4 - 15px);
+}
+
+.product-page__item:hover,
 .product-item:hover {
     transform: translateY(-6px) scale(1.02);
     box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.25);
     border: 1px solid var(--secondary-color);
 }
 
+.product-page__item img,
 .product-item img {
     aspect-ratio: 119 / 159;
     object-fit: cover;
@@ -625,6 +674,7 @@
     border-radius: 5px;
 }
 
+.product-page__item h3,
 .price-current,
 .product-item h3 {
     font-size: var(--font-size-base);
@@ -681,10 +731,26 @@
     gap: 20px;
 }
 
+.news-page__container {
+    gap: 20px;
+    padding: 60px 0px;
+}
+
+.feedback-title h2,
 .product-title h2,
 .knowledge-container h2,
 .news-container>div:first-child>h2 {
     font-size: calc(var(--font-size-base) * 2);
+}
+
+.feedback-title h2 {
+    text-align: center;
+}
+
+.feedback-title p {
+    text-transform: uppercase;
+    font-size: calc(var(--font-size-base) + 6px);
+    font-weight: 200;
 }
 
 .news__top {}
@@ -800,7 +866,695 @@
     padding: 10px;
 }
 
+/* css nav bar */
+.nav-bar__container {
+    justify-content: left;
+    padding: 20px 0px;
+    gap: 10px;
+}
+
+.nav-bar__item {
+    font-size: var(--font-size-base);
+    text-decoration: underline;
+    text-transform: capitalize;
+}
+
+.nav-bar__item:not(:last-child)::after {
+    content: "";
+    display: inline-block;
+    aspect-ratio: 1 / 1;
+    width: 10px;
+    height: auto;
+    margin-left: 10px;
+    background-image: url(../../img/icon/chevron-right.svg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+/* css product page */
+.product-page__container {
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.product-page__padding {
+    padding: 50px 0px;
+    gap: 30px;
+}
+
+.product-page__intro {
+    gap: 30px;
+}
+
+.product-page__intro ol,
+ul {
+    margin-left: 20px;
+}
+
+.product-page__share {
+    justify-content: space-between;
+}
+
+.product-page__share i {
+    font-size: var(--font-size-base);
+}
+
+.product-page__btn {
+    gap: 10px;
+    color: var(--white-color);
+    padding: 10px 20px;
+    border: 1px solid transparent;
+    font-size: var(--font-size-base);
+}
+
+.product-page__btn img {
+    max-width: 16px;
+    aspect-ratio: 1 / 1;
+}
+
+.price-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 16px;
+    text-align: center;
+    background: #fff;
+    overflow: hidden;
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+}
+
+.price-table th {
+    padding: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+}
+
+.price-table td {
+    padding: 15px;
+    border-bottom: 1px solid #eee;
+}
+
+.price-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.price-table tr:hover {
+    background-color: #f1fdfb;
+    transition: 0.3s;
+}
+
+.price-table td.price {
+    font-size: 18px;
+    font-weight: bold;
+    color: #00796b;
+}
+
+.product-page__intro h3 {
+    margin-bottom: 30px;
+}
+
+.product-page__intro li:not(:first-child) h3 {
+    margin-top: 30px;
+}
+
+.table-heading {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    width: fit-content;
+    min-width: 300px;
+    position: relative;
+}
+
+.table-heading__top img {
+    width: 10px;
+}
+
+.table-heading__top {
+    background: var(--white-color);
+    padding: 12px 16px;
+    font-weight: 600;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background 0.3s;
+}
+
+.table-heading__top:hover {
+    background: #eee;
+}
+
+.table-heading__top i {
+    transition: transform 0.3s;
+}
+
+.table-heading__top.active i {
+    transform: rotate(180deg);
+}
+
+.table-heading__body {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+    background: #fff;
+}
+
+.table-heading__body.open {
+    max-height: 500px;
+}
+
+.table-heading__body ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.table-heading__body li {
+    border-top: 1px solid #eee;
+}
+
+.table-heading__body a {
+    display: block;
+    padding: 10px 16px;
+    color: #333;
+    text-decoration: none;
+    transition: background 0.2s;
+}
+
+.table-heading__body a:hover {
+    background: #f2f2f2;
+}
+
+.product-page__intro ul {
+    list-style-type: disc;
+}
+
+.product-page__intro ul li {
+    margin-bottom: 10px;
+}
+
+.product-page__intro h3,
+.product-page__intro p,
+.product-page__intro li {
+    font-size: var(--font-size-base);
+    text-transform: unset;
+}
+
+/* css blog */
+.news-leftside__list,
+.news-list__item,
+.news-leftside__small,
+.news-leftside__top,
+.news-page__container>div,
+.news-rightside,
+.news-leftside {
+    gap: 20px;
+}
+
+.news-leftside__larger {
+    flex: 1 1 60%;
+}
+
+.news-leftside {
+    flex: 1 1 75%;
+}
+
+.news-leftside__small {
+    flex: 0 0 40%;
+}
+
+.news-rightside {
+    flex: 0 0 25%;
+}
+
+.news-small__item .news__image {
+    flex: 0 0 40%;
+}
+
+.news-list__item .news__image img,
+.news-small__item .news__image img {
+    height: 100%;
+}
+
+.news-small__item .news__content p {
+    -webkit-line-clamp: 1;
+}
+
+.news-small__item .news__body h3 {
+    font-size: var(--font-size-base);
+}
+
+.news-right__type {
+    gap: 10px;
+}
+
+.news-right__type a {
+    background-color: var(--white-color);
+    border-radius: 10px;
+    border: 1px solid var(--primary-color);
+    padding: 20px 10px;
+    color: var(--primary-color);
+    transition: all 0.3s ease;
+}
+
+.news-right__type a:hover {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.news-right__item img {
+    aspect-ratio: 111 / 84;
+    max-width: 111px;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.news-leftside__larger .news__content p,
+.news-small__item .news__content p,
+.news-list__item p {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.news-leftside__larger .news__content p,
+.news-list__item p {
+    -webkit-line-clamp: 2;
+}
+
+.news-list__item .news__content {
+    flex: 1;
+    justify-content: space-between;
+}
+
+.news-leftside__larger .news__item,
+.news-small__item,
+.news-list__item,
+.news-right__item {
+    padding: 10px;
+    gap: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    border: 1px solid transparent;
+    transition: all 0.6s ease;
+}
+
+.news-leftside__larger .news__item:hover,
+.news-small__item:hover,
+.news-list__item:hover,
+.news-right__item:hover {
+    transform: translateY(-5px) scale(1.02);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.25);
+    border: 1px solid var(--secondary-color);
+}
+
+.news-right__item p {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: var(--font-size-base);
+}
+
+
+/* css review */
+.evaluate-container {
+    flex-direction: column;
+    gap: 20px;
+}
+
+.review-submit {
+    margin-bottom: 20px;
+}
+
+.btn-submit-review {
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn-submit-review:hover {
+    background-color: var(--secondary-color);
+}
+
+.review-list {
+    flex-direction: column;
+    gap: 20px;
+}
+
+.review-item {
+    border: 1px solid var(--primary-color);
+    padding: 15px;
+    background-color: var(--color-white);
+    flex-direction: column;
+    gap: 10px;
+}
+
+.review-item__header {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.review-item__header strong {
+    font-weight: bold;
+    font-size: calc(var(--font-size-base) + 4px);
+}
+
+.review-item__content {
+    margin-bottom: 10px;
+    color: var(--black-color);
+}
+
+.review-item__footer {
+    gap: 10px;
+    font-size: 13px;
+    color: var(--black-color);
+    align-items: center;
+}
+
+.review-item__footer span,
+.review-item__content {
+    font-size: var(--font-size-base);
+}
+
+.btn-show-more {
+    display: none;
+    width: fit-content;
+    padding: 8px 16px;
+    border: none;
+    background-color: var(--primary-color);
+    color: var(--color-white);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.4s ease;
+}
+
+.btn-show-more:hover {
+    background-color: var(--secondary-color);
+}
+
+/* css contact */
+.map-container {
+    width: 100%;
+    aspect-ratio: 16 / 6;
+    margin: 20px 0px;
+    height: auto;
+}
+
+.des-contact {
+    text-align: center;
+    padding: 0px 10vw;
+}
+
+.contact-bottom__container,
+.contact-top__container {
+    padding: 30px 0px
+}
+
+.contact-info__container {
+    gap: 30px;
+    flex-wrap: wrap;
+    margin: 20px 0px;
+}
+
+.contact-info__content {
+    gap: 10px;
+}
+
+.call-info {
+    gap: 10px;
+    margin: 20px 0px;
+}
+
+.call-info b {
+    color: var(--primary-color);
+    font-size: calc(var(--font-size-base) + 12px);
+}
+
+.call-info img {
+    aspect-ratio: 1 / 1;
+    max-width: 28px;
+}
+
+/* popup đánh giá */
+
+.review-section {
+    padding: 40px 20px;
+    background-color: var(--color-white);
+    border: 1px solid var(--black-color);
+    border-radius: 8px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.review-section__title {
+    font-size: calc(var(--font-size-base) + 8px);
+    font-weight: bold;
+    border-bottom: 2px solid var(--black-color);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    color: var(--primary-color);
+}
+
+.review-summary {
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.review-summary__score {
+    font-size: calc(var(--font-size-base) * 2);
+    font-weight: bold;
+    color: var(--secondary-color);
+    flex-direction: column;
+    gap: 10px;
+}
+
+.review-summary__score strong {
+    font-size: calc(var(--font-size-base) * 2);
+    color: var(--primary-color);
+    text-align: center;
+}
+
+.review-summary__stars {
+    color: var(--secondary-color);
+    font-size: var(--font-size-base);
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+}
+
+.review-filter {
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+.review-filter button {
+    height: fit-content;
+    padding: 10px 20px;
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    background-color: var(--color-white);
+    color: var(--primary-color);
+    cursor: pointer;
+    font-size: calc(var(--font-size-base) - 2px);
+    transition: all 0.2s ease;
+}
+
+.review-filter button:hover,
+.review-filter .active {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
+.popup-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 9;
+}
+
+.popup-overlay.active {
+    display: flex;
+}
+
+.popup-box {
+    background: var(--white-color);
+    padding: 24px;
+    width: 90%;
+    max-width: 400px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    height: fit-content;
+    transform: translate(-50%, -50%);
+}
+
+.popup-title {
+    margin-bottom: 12px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.popup-textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    resize: vertical;
+    margin-bottom: 16px;
+}
+
+.popup-stars {
+    justify-content: center;
+    font-size: calc(var(--font-size-base) + 8px);
+    margin-bottom: 16px;
+}
+
+.popup-stars .star {
+    cursor: pointer;
+    color: var(--color-black);
+    margin: 0 4px;
+    transition: color 0.3s;
+}
+
+.popup-stars .star.active {
+    color: gold;
+}
+
+.popup-captcha {
+    margin-bottom: 16px;
+    font-size: calc(var(--font-size-base) - 2px);
+}
+
+.popup-actions {
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.btn-cancel,
+.btn-submit {
+    padding: 8px 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.btn-cancel {
+    background: var(--secondary-background-color);
+}
+
+.btn-submit {
+    background: var(--secondary-color);
+    color: var(--white-color);
+}
+
+.popup-close {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    background: transparent;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+
+/* css pagination */
+.product-pagination {
+    gap: 10px;
+}
+
+.product-page__title h1 {
+    font-size: calc(var(--font-size-base) + 14px);
+}
+
+.product-page__filter {
+    justify-content: space-between;
+}
+
+.sort-select {
+    padding: 8px 40px 8px 12px;
+    border: 1px solid #000;
+    border-radius: 2px;
+    font-size: 16px;
+    appearance: none;
+    background: url("../../img/icon/chevron-down.webp") no-repeat right 10px center;
+    background-size: 10px;
+    cursor: pointer;
+}
+
+.product-pagination__btn:last-child,
+.product-pagination__btn:first-child {
+    border: unset;
+}
+
+.product-pagination__btn {
+    width: 30px;
+    height: 30px;
+    border: 1px solid var(--black-color);
+}
+
+.product-pagination__btn.active {
+    background-color: var(--secondary-color);
+    color: var(--white-color);
+    border: 1px solid var(--secondary-color);
+}
+
+/*  css feedback */
+.feedback-container {
+    padding: 80px 0px 80px;
+    gap: 30px;
+}
+
+.feedback-item {
+    position: relative;
+    justify-content: right;
+}
+
+.feedback-image {
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 20%;
+    gap: 5px;
+}
+
+.feedback-image img {
+    aspect-ratio: 366 / 275;
+    max-width: 366px;
+}
+
+.feedback-content {
+    flex: 0 0 85%;
+    padding: 60px 60px 60px 200px;
+    gap: 10px;
+    margin-bottom: 160px;
+}
+
+.feedback-content img {
+    aspect-ratio: 52.5 / 37.5;
+    max-width: 52.5px;
+}
+
+.feedback-content p {
+    color: var(--white-color);
+}
+
+
 /* css footer */
+.footer-container {
+    padding: 60px 0px;
+}
+
 footer {
     border-top: 1px solid var(--black-color);
 }
