--- a/component/footer.html
+++ b/component/footer.html
@@ -17,16 +17,16 @@
                 <div class="flex flex-col footer-bottom__content">
                     <h3>Về JAN’SLENMEN</h3>
                     <a href="#">Giới thiệu doanh nghiệp</a>
-                    <a href="#">Tuyển dụng</a>
+                    <a href="../recruitment.html">Tuyển dụng</a>
                     <a href="#">Gửi góp ý, khiếu nại</a>
                 </div>
                 <div class="flex flex-col footer-bottom__content">
                     <h3>Các chính sách</h3>
-                    <a href="#">Chính sách giá</a>
-                    <a href="#">Chính sách đổi vỏ chai</a>
-                    <a href="#">Chính sách bảo mật</a>
-                    <a href="#">Chính sách kiểm tra và đổi trả sản phẩm</a>
-                    <a href="#">Chính sách thanh toán và giao hàng</a>
+                    <a href="../policy.html">Chính sách giá</a>
+                    <a href="../policy.html">Chính sách đổi vỏ chai</a>
+                    <a href="../policy.html">Chính sách bảo mật</a>
+                    <a href="../policy.html">Chính sách kiểm tra và đổi trả sản phẩm</a>
+                    <a href="../policy.html">Chính sách thanh toán và giao hàng</a>
                 </div>
                 <div class="flex flex-col footer-bottom__content">
                     <h3>Mạng xã hội</h3>
